<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="252dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="44dp"
        android:text="@string/department_of_agriculture_engineering"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="252dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="44dp"
        android:text="@string/university_of_ruhuna"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="252dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="44dp"
        android:text="@string/faculty_of_agriculture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="90dp"
        android:layout_height="111dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:srcCompat="@drawable/uor" />

    <View
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="124dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <View
        android:id="@+id/view2"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="81dp"
        android:background="@drawable/custome_circule"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/ec_value"
        android:textColor="#CF1010"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/view2" />

    <TextView
        android:id="@+id/ecValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:textAlignment="center"
        android:textColor="#0D22DA"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.305" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="202dp"
        android:layout_height="59dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/dashboard"
        android:textColor="#0FA804"
        android:textIsSelectable="false"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/exitIcon"
        android:layout_width="54dp"
        android:layout_height="37dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_exit" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="223dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="15dp"
        android:text="@string/pump_status"
        android:textAlignment="center"
        android:textColor="#0545E6"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/onOrOff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/onOrOff"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="44dp"
        android:text="@string/off"
        android:textAlignment="textStart"
        android:textColor="#F60707"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="52dp"
        android:layout_height="19dp"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="15dp"
        android:text="Logout"
        android:textAlignment="center"
        android:textColor="#D11414"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/exitIcon" />

</androidx.constraintlayout.widget.ConstraintLayout>